src/test/deca/context/invalid/type-minus.deca
// Description:
//    Soustraction avec une opérande chaîne de caractères.
//
// Resultats:
//    Ligne 11: Le type ne respecte pas la règle 3.33.
//
// Historique:
//    cree le 01/01/2024

{
    print("sarah est bizarre" - 2);
}